# SPH-HeartSim

./: .gitignore  CMakeLists.txt  README.md
python/: design_pacing_sites.py  display_simulation_result.py  generate_slab_pointcloud_with_fibers.py  how_to_automate_s2_pacing_sites_to_generate_rotor.py  motion_vector.py  ui_select_particles.py  ui_select_vertices.py
python/codes/: __init__.py  load_simulation_result.py
sim/: CMakeLists.txt  excitation-contraction.cpp
sim/data/: 2024-08-14-rec26-frame002.npy.stl  39_2-1-1-ReLA_212.stl  39_2-1-1-ReLA_212_thick_smooth.stl  ideal_bi_ventricle.stl  slab.stl  slab_all_positive.stl
src/for_3D_build/common/: data_type.h
src/for_3D_build/geometries/: triangle_mesh_shape.cpp
src/shared/common/: geometric_primitive.h
src/shared/particle_dynamics/electro_physiology/: electro_physiology.cpp  electro_physiology.h
src/shared/physical_closure/materials/: base_material.cpp  diffusion_reaction.cpp
src/shared/sphinxsys_system/: sph_system.cpp  sph_system.h
tools/: design_pacing_sites.py  display_simulation_result.py  fn_load_simulation_result.py  load_sim_result.py  load_sim_result_and_motion_vector.py  load_simulation_result.py  load_stl.py  matlab_load_particles.m  motion_vector.py
